Changes for Sci. submission

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 16 Mar 2021.
+%% Created using Papers on Wed, 17 Mar 2021.
 %% http://papersapp.com/papers/
 
 @article{Gaines:2018sg,
@@ -414,6 +414,26 @@ rating = {0},
 date-added = {2018-08-08T09:39:18GMT},
 date-modified = {2020-11-14T16:15:58GMT},
 uri = {\url{papers3://publication/uuid/B5121903-0631-479C-9DA8-B8465B46CAFE}}
+}
+
+@article{Deser:2020bj,
+author = {Deser, C and Lehner, F and Rodgers, K B and Ault, T and Delworth, T L and DiNezio, P N and Fiore, A and Frankignoul, C and Fyfe, J C and Horton, D E and Kay, J E and Knutti, R and Lovenduski, N S and Marotzke, J and McKinnon, K A and Minobe, S and Randerson, J and Screen, J A and Simpson, I R and Ting, M},
+title = {{Insights from Earth system model initial-condition large ensembles and future prospects}},
+journal = {Nature Climate Change},
+year = {2020},
+volume = {10},
+number = {4},
+pages = {277--286},
+month = apr,
+publisher = {Nature Publishing Group},
+doi = {10.1038/s41558-020-0731-2},
+language = {English},
+rating = {0},
+date-added = {2021-03-17T19:31:48GMT},
+date-modified = {2021-03-17T19:35:53GMT},
+abstract = {Internal variability in the climate system confounds assessment of human-induced climate change and imposes irreducible limits on the accuracy of climate change projections, especially at regional and decadal scales. A new collection of initial-condition large ensembles (LEs) generated with seven Earth system models under historical and future radiative forcing scenarios provides new insights into uncertainties due to internal variability versus model differences. These data enhance the assessment of climate change risks, including extreme events, and offer a powerful testbed for new methodologies aimed at separating forced signals from internal variability in the observational record. Opportunities and challenges confronting the design and dissemination of future LEs, including increased spatial resolution and model complexity alongside emerging Earth system applications, are discussed. Climate change detection is confounded by internal variability, but recent initial-condition large ensembles (LEs) have begun addressing this issue. This Perspective discusses the value of multi-model LEs, the challenges of providing them and their role in future climate change research.},
+url = {https://www.nature.com/articles/s41558-020-0731-2},
+uri = {\url{papers3://publication/doi/10.1038/s41558-020-0731-2}}
 }
 
 @article{PackagenlmeLinear:2020ut,
@@ -1626,7 +1646,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2020-12-22T20:42:33GMT},
-date-modified = {2021-03-08T16:55:55GMT},
+date-modified = {2021-03-17T13:05:05GMT},
 url = {https://www.ecologyandsociety.org/vol25/iss4/art41/},
 local-url = {file://localhost/Users/carmelia/Dropbox/Papers.Library3.Library/Files/E4/E4E2314E-2D4F-46CA-8B15-346F7B4FDEB1.pdf},
 file = {{E4E2314E-2D4F-46CA-8B15-346F7B4FDEB1.pdf:/Users/carmelia/Dropbox/Papers.Library3.Library/Files/E4/E4E2314E-2D4F-46CA-8B15-346F7B4FDEB1.pdf:application/pdf}},
@@ -2179,7 +2199,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2020-09-23T22:53:16GMT},
-date-modified = {2021-03-14T14:02:23GMT},
+date-modified = {2021-03-17T13:06:14GMT},
 abstract = {Regulatory boundaries and species distributions often do not align. This is especially the case for marine species crossing multiple Exclusive Economic Zones (EEZs). Such movements represent a challenge for fisheries management, as policies tend to focus at the national level, yet~international collaborations are needed to maximize long-term ecological, social and economic benefits of shared marine species. Here, we combined species distributions and the spatial delineation of EEZs at the global level~to identify the number of commercially exploited marine species that are shared between neighboring nations. We found that 67% of the species analyzed are transboundary (n = 633). Between 2005 and 2014, fisheries targeting these species within global-EEZs caught on average 48 million tonnes per year, equivalent to an average of USD 77 billion in annual fishing revenue. For select countries, over 90% of their catch and economic benefits were attributable to a few shared resources. Our analysis suggests that catches from transboundary species are declining more than those from non-transboundary species. Our study has direct implications for managing fisheries targeting~transboundary species, highlighting the need for strengthened effective~and equitable international cooperation.},
 url = {http://www.nature.com/articles/s41598-020-74644-2},
 local-url = {file://localhost/Users/carmelia/Dropbox/Papers.Library3.Library/Files/AE/AEA9D954-32E4-4AF8-BEFA-A3AEFD05BBE8.pdf},
@@ -2762,7 +2782,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2020-03-03T20:21:53GMT},
-date-modified = {2021-03-10T21:46:32GMT},
+date-modified = {2021-03-16T21:51:22GMT},
 abstract = {Climate change is driving fishery stocks out of their historical ranges. Along with the management challenge of species entering new jurisdictions, the exit of species from countries{\textquoteright} waters poses distinct threats to those resources and the economies that depend on them. We show that this risk is particularly acute in the tropics, where projected exits are highest and entries are fewest. We find that existing policy frameworks are poorly equipped for this challenge, and we suggest a way forward that draws on climate policy. Climate change is driving fishery stocks out of their historic ranges. This study finds that the risk of such fishery exits is greatest in the tropics and that policy frameworks are poorly equipped to grapple with this challenge.},
 url = {https://www.nature.com/articles/s41893-020-0476-y},
 local-url = {file://localhost/Users/carmelia/Dropbox/Papers.Library3.Library/Files/F9/F9FA9211-FDFE-4C30-A29D-7B31820BF089.pdf},
