--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -59,11 +59,11 @@ Rapid climate-induced shifts in transboundary fish stocks
 
 **Main Text.**
 
-In the past century, human activities have altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species' distributions reflect species' preferences for discrete environmental conditions [@Hutchinson:1957nt].As a result of these past changes, many marine species have shifted their distributions towards higher latitudes, deeper water or to follow local temperature gradients to remain within their optimal environmental "niche" [@Poloczanska:2016kk; @Barange:2014kr]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt; @Barange:2014kr], impacting fisheries production and economies [@Sumaila:2019ew], and compromising our capacity to reach international sustainability goals within the 2030 Agenda such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management [@Cheung:2018dh], including for species that cross international borders, which are known as ‘shared stocks’ [@Pinsky:2018cb].
+In the past century, human activities have altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species' distributions reflect species' preferences for discrete environmental conditions [@Hutchinson:1957nt].As a result of these past changes, many marine species have shifted their distributions towards higher latitudes, deeper water or to follow local temperature gradients to remain within their optimal environmental "niche" [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fisheries production and economies [@Sumaila:2019ew], and compromising our capacity to reach international sustainability goals within the 2030 Agenda such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, which are known as ‘shared stocks’ [@Pinsky:2018cb].
 
 The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the United Nations' Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Countries are responsible for the management of stocks within their EEZs, under UNCLOS, and are encouraged to cooperate when stocks are shared [@UnitedNations:1986tl]. A recent study estimates that, globally, there are 633 transboundary fish species representing 67% of identified exploited taxa. These species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue between 2005 and 2010 [@PalaciosAbrantes:2020tv].
 
-The effectiveness of fisheries management for transboundary species, and thus reaching the 2030 Agenda [@Pecl:2017hu], is challenged by shifts in stocks' distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records [@Baudron:2020dj] and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Song:2017iua; @Spijkers:2017ij; @Crespo:2020cs]. Such patterns are expected to be exacerbated by continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the  Sustainable Development Goals (SDG) under the United Nations 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
+The effectiveness of fisheries management for transboundary species, and thus reaching the 2030 Agenda [@Pecl:2017hu], is challenged by shifts in stocks' distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. Such patterns are expected to be exacerbated by continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the  Sustainable Development Goals (SDG) under the United Nations 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
 Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (RCP8.5; Methods). We then estimate the year in which the 663 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variation and the intensity of this shift (i.e., time of emergence; see Methods). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population (15) and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
@@ -93,7 +93,7 @@ grid.raster(img)
 
 We estimated the current (2005 and 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs. Within five years of the UN 2030 Agenda, 979 transboundary stocks responsible for 5.3 billion USD in fishing revenue are projected to shift within the EEZs of 76 countries (Fig. \@ref(fig:toeFigure3)); with 4.2 billion USDs accounted by 321 stocks shifting in just eleven countries (Fig. \@ref(fig:toeFigure3)). Most of the remaining countries in the top $75^{th}$ revenue percentile will see early shifts (e.g., before 2050) with the exception of Japan, Korea, Peru and Russia, who are projected to have later shifts (e.g., after 2050). In terms of the number of transboundary stocks shifting from historical variability, Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66), emerge as the top 5 countries (Fig. \@ref(fig:toeFigure3)).
 
-```{r toeFigure3, eval = T,  echo = F, fig.width=7, fig.height=8,fig.pos= "H", fig.cap =  "Average range shift of transboundary stocks per country. Countries are coded according to different colored symbols representative of 5 distinct regions. Horizontal line separating the top 75th percentile of annual fishing revenue. Showing country names for those within the top 75th percentile projected to  have an average shift within 5 years of the 2030 Agenda."}
+```{r toeFigure3, eval = T,  echo = F, fig.width=10, fig.height=8,fig.pos= "H", fig.cap =  "Average range shift of transboundary stocks per country. Countries are coded according to different colored symbols representative of 5 distinct regions. Horizontal line separating the top 75th percentile of annual fishing revenue. Showing country names for those within the top 75th percentile projected to  have an average shift within 5 years of the 2030 Agenda."}
 
 img <- readPNG("../Figures/Fig3.png")
 grid.raster(img)
@@ -127,19 +127,19 @@ Early shifts in the shared distribution of transboundary stocks concur with prev
 
 **Hotspot of climate risk on transboundary fisheries management**
 
-Our results underscore regional "hotspots" of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure5)A). Such regions, like the Caribbean, are characterized by high levels of warming relative to natural internal variability [@IPCC:2019tn; @Hawkins:2012hc] and high vulnerability of species to warming waters [@IPCC:2014bz]. Moreover, they represent relatively small EEZs that border multiple countries (e.g., the Caribbean). Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting transboundary stocks. 
+Our results underscore regional "hotspots" of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure5)A). Such regions, like the Caribbean, are characterized by high levels of warming relative to natural internal variability [@IPCC:2019tn; @Hawkins:2012hc] and high vulnerability of species to warming waters [@IPCC:2019tn]. Moreover, they represent relatively small EEZs that border multiple countries (e.g., the Caribbean). Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting transboundary stocks. 
 
-Management plans that are not prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots'' is key to anticipate a potential increase in fisheries conflicts in the coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@Pinsky:2018cb]. For example, countries that are Party to the Nauru Agreement (PNA) manage their fisheries under a  Vessel Day Scheme. Because this scheme takes into account shifts in stocks and catches, it is a good example of a management system that is somewhat anticipatory [@Aqorau:2018bh]. However, even strategies that take into consideration  species’ shift within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Quota allocation methods based on a stock’s current distribution [@Sumaila:2020tp; @PalaciosAbrantes:2020vt] and/or on fixed-historical proportion [@Baudron:2020dj] need to evolve to be more agile. Fisheries based on historic participation could move towards a dynamic method or a combination of both  [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from the fishery. Side payments are mechanisms that can provide a solution to the inequality produced by shifts in a stock’s distribution [@Tunca:2019if]. These can, but do not have to, be monetary (e.g., the stock-“winning” state compensates the stock-“losing” state for the proportional shift, a conservation fund paid mainly by one Party) [@Miller:2013iv]. 
+Management plans that are not prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots'' is key to anticipate a potential increase in fisheries conflicts in the coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@Pinsky:2018cb]. For example, countries that are Party to the Nauru Agreement (PNA) manage their fisheries under a  Vessel Day Scheme. Because this scheme takes into account shifts in stocks and catches, it is a good example of a management system that is somewhat anticipatory [@Aqorau:2018bh]. However, even strategies that take into consideration  species’ shift within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Quota allocation methods based on a stock’s current distribution and/or on fixed-historical proportion need to evolve to be more agile [@Sumaila:2020tp; @PalaciosAbrantes:2020vt]. Fisheries based on historic participation could move towards a dynamic method or a combination of both  [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from the fishery. Side payments are mechanisms that can provide a solution to the inequality produced by shifts in a stock’s distribution [@Tunca:2019if]. These can, but do not have to, be monetary (e.g., the stock-“winning” state compensates the stock-“losing” state for the proportional shift, a conservation fund paid mainly by one Party) [@Miller:2013iv]. 
 
 **Potential drivers of shift and associated uncertainties**
 
-The early projected range shifts of a large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability (e.g., SST which is projected to increase historical variability by 2030 in 70% of the global ocean under RCP 8.5 [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and NPP are the main drivers of changes in species distributions across oceanic basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically for the DBEM, SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems while NPP drives temperate regions’ results [@Cheung:2016tt]. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2014bz], while also explaining the later, and sometimes non-existent, shift at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
+The early projected range shifts of a large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability (e.g., SST which is projected to increase historical variability by 2030 in 70% of the global ocean under RCP 8.5 [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and NPP are the main drivers of changes in species distributions across oceanic basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically for the DBEM, SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shift at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
 
-Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and  *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an extreme case of shifts in the shared distribution of transboundary species. Thus, any climate change mitigation pathway (e.g., RCP 2.6) could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fisheries distribution. . This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available **(Deser et al. 2020)** and cannot address limitations of process level understanding. As a consequence, transboundary fisheries managers are facing changes in stocks’ shared distributions embedded in complex uncertainties, and will likely continue to do so in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf] and where internal variability (e.g., El Niño Southern Oscillation - ENSO- for Pacific nations) is also important . These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, changes in fish biomass with multiple upper trophic level models, including the DBEM, show overall agreement across models in terms of direction of change, but variability in the magnitude of that change [@BryndumBuchholz:2019kh]. Further research that reduces uncertainty in the response of the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to a larger structural uncertainty of fish and fisheries models [@Lotze:2019ce]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results in changes in both time of emergence and stock share ratio of transboundary stocks, and potentially identity different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and  *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an extreme case of shifts in the shared distribution of transboundary species. Thus, any climate change mitigation pathway (e.g., RCP 2.6) could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fisheries distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process level understanding. As a consequence, transboundary fisheries managers are facing changes in stocks’ shared distributions embedded in complex uncertainties, and will likely continue to do so in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf] and where internal variability (e.g., El Niño Southern Oscillation - ENSO- for Pacific nations) is also important . These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, changes in fish biomass with multiple upper trophic level models, including the DBEM, show overall agreement across models in terms of direction of change, but variability in the magnitude of that change [@BryndumBuchholz:2019kh]. Further research that reduces uncertainty in the response of the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to a larger structural uncertainty of fish and fisheries models [@Lotze:2019ce]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results in changes in both time of emergence and stock share ratio of transboundary stocks, and potentially identity different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
 **Conclusion**
 
-Th global community has set the ambitious goal of managing all fisheries sustainably (SDG 14 – Life below water) by 2030; achieving this goal would have clear benefits for a number of other societal goals [@UnitedNations2018; @Singh:2017ds]. Preparing anticipatory policies to deal with shifting transboundary stocks is key to achieving the SDGs and ensuring effective governance of the world’s fisheries [@Pinsky:2018cb; @Oremus:2020id; @Pecl:2017hu]. In this contribution, we implemented two steps to demonstrate how to achieve sustainable transboundary fisheries in a changing world [@Link:2010ei]. First, we identified the transboundary stocks that would likely see shifts in their shared distribution compared to their historical average and the year in which such shifts are predicted to occur. Second, we estimated the intensity of such change. Our results have direct implications for ocean governance as the data provided can inform regional management bodies and member countries to anticipate the likely climate-driven challenges to transboundary fisheries management. While future studies, specifically at more localized scale, will provide valuable nuance in designing effective policies, our results provide an important baseline on which to build when preparing ocean governance for shifting transboundary stocks [@Pinsky:2018cb; @PalaciosAbrantes:2020tv]. Our findings emphasize recent calls for the urgent adoption of measures in support of more adaptive, flexible fisheries management and governance to support resilient fisheries and durable management systems [@Pinsky:2018cb; @Pinsky:2020jx; @CisnerosMata:2019ks; @Oremus:2020id].
+Th global community has set the ambitious goal of managing all fisheries sustainably (SDG 14 – Life below water) by 2030; achieving this goal would have clear benefits for a number of other societal goals [@UnitedNations2018; @Singh:2017ds]. Preparing anticipatory policies to deal with shifting transboundary stocks is key to achieving the SDGs and ensuring effective governance of the world’s fisheries [@Pinsky:2018cb; @Oremus:2020id; @Pecl:2017hu]. In this contribution, we implemented two steps to demonstrate how to achieve sustainable transboundary fisheries in a changing world [@Link:2010ei]. First, we identified the transboundary stocks that would likely see shifts in their shared distribution compared to their historical average and the year in which such shifts are predicted to occur. Second, we estimated the intensity of such change. Our results have direct implications for ocean governance as the data provided can inform regional management bodies and member countries to anticipate the likely climate-driven challenges to transboundary fisheries management. While future studies, specifically at more localized scale, will provide valuable nuance in designing effective policies, our results provide an important baseline on which to build when preparing ocean governance for shifting transboundary stocks [@Pinsky:2018cb; @PalaciosAbrantes:2020tv]. Our findings emphasize recent calls for the urgent adoption of measures in support of more adaptive, flexible fisheries management and governance to support resilient fisheries and durable management systems [@Pinsky:2018cb; @Pinsky:2020jx; @Oremus:2020id].
 
 <!-- ## Supplements -->
 
@@ -150,7 +150,7 @@ Th global community has set the ambitious goal of managing all fisheries sustain
 \setcounter{table}{0}
 
 
-```{r comitee_form, child = '../Scripts/Supplements.Rmd', eval = T}
+```{r supplements, child = '../Scripts/Supplements.Rmd', eval = T}
 
 ```
 
